--- a/sensor-monitoring/package.json
+++ b/sensor-monitoring/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.8.4",
     "react-router": "^4.3.1",
     "react-scripts": "2.1.8",
+    "recharts": "^1.5.0",
     "victory": "^32.0.0"
   },
   "scripts": {
