--- a/sensor-monitoring/package.json
+++ b/sensor-monitoring/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-maps-react": "^2.0.2",
     "react": "^16.8.4",
+    "react-d3-speedometer": "^0.4.2",
     "react-dom": "^16.8.4",
     "react-router": "^4.3.1",
     "react-scripts": "2.1.8",
