--- a/sensor-monitoring/package.json
+++ b/sensor-monitoring/package.json
@@ -7,10 +7,12 @@
     "react": "^16.8.4",
     "react-d3-speedometer": "^0.4.2",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
     "recharts": "^1.5.0",
+    "redux": "^4.0.1",
     "victory": "^32.0.0"
   },
   "scripts": {
